--- a/Lab1_THKTPM/Views/Shared/_MasterLayout.cshtml
+++ b/Lab1_THKTPM/Views/Shared/_MasterLayout.cshtml
@@ -15,12 +15,17 @@
 <body>
     <!-- Render Body -->
     @RenderBody()
-
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script> 
     <script src="~/js/materialize.min.js"></script>
+    <script src="~/js/init.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/js/materialize.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
+    <script src="ttps://ajhax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script>
     <script src="~/js/init.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
-</html>
